<resources>

    <!-- ============== Jeux  ============== -->

    <string name="label_img">Image</string>
    <string name="label_calcul">Calcul</string>
    <string name="label_timer">Timer :</string>
    <string name="label_questions">Questions :</string>
    <string name="label_score">Score :</string>
    <string name="txt_regle_clicker">Cliquez sur l\'image pour la faire disparaître !</string>

    <!-- ==============  NavBar  ============== -->

    <string name="label_profil">Profil</string>
    <string name="label_MoovinTime">Moovintime</string>
    <string name="label_edt">EDT</string>
    <string name="label_reveil">Réveil</string>
    <string name="label_meteo">Méteo</string>


    <!-- ============== Page d'accueil ============== -->

    <string name="app_name">EtuMoov</string>
    <string name="txt_authentification">S\'authentifier</string>
    <string name="txt_inscrire">S\'inscrire</string>
    <string name="txt_slogan">EtuMoov, le compagnon des étudiants</string>

    <!-- ============== Page connexion ============== -->

    <string name="txt_connexion">Connectez-vous !</string>
    <string name="label_email">Email</string>
    <string name="ET_email">Insérez votre email</string>
    <string name="label_mdp">Mot de passe</string>
    <string name="ET_mdp">Insérez votre mot de passe</string>
    <string name="txt_pasdecompte">Vous n\'avez pas encore de compte, Inscrivez vous !</string>
    <string name="btn_connexion">Connexion</string>
    <string name="txt_saisirEmail">Veuillez saisir votre mot de passe :)</string>
    <string name="txt_mdpoublie">Mot de passe oublié ? Cliquez ici </string>

    <!-- ============== Page d'inscription ============== -->

    <string name="txt_inscrivezvousmtn">Inscrivez-vous dès maintenant !</string>
    <string name="label_nom">Nom</string>
    <string name="ET_nom">Insérez votre nom</string>
    <string name="label_prenom">Prénom</string>
    <string name="ET_prenom">Insérez votre prénom</string>
    <string name="txt_vousdejacompte">Vous avez déjà un compte ? Connectez-vous</string>

    <!-- ============== Mot de passe oublié ============== -->

    <string name="ET_rentremdp">Rentrez votre adresse email</string>
    <string name="btn_reinitialiser">Réinitialiser votre mot de passe</string>
    <string name="label_date">Date du jour</string>

    <!-- ============== Bouton ============== -->
    <string name="btn_valider">Valider</string>
    <string name="btn_ajoutrappel">Ajouter</string>
    <string name="btn_deco">Déconnexion</string>
    <string name="btn_parametre">Paramètres</string>


    <!-- ============== Ajout Rappel ============== -->
    <string name="ET_daterappel">Date du rappel (xx/xx/xxxx)</string>
    <string name="ET_descrrappel">Description du rappel</string>
    <string name="ET_titrerappel">Titre de votre rappel</string>
    <string name="txt_titreaddrappel">Ajouter un rappel !</string>
    <string name="txt_ajt_rappel">Ajouter un nouveau rappel</string>

    <!-- ============== Liste des rappels ============== -->

    <string name="txt_listerappel">Liste des choses à faire : </string>
    <string name="langue_app">Français</string>

    <!--  ============== Météo ============== -->

    <string name="degre">Veuillez Patienter</string>
    <string name="nouv_ville">Trouver une nouvelle ville !</string>
    <string name="entr_ville">Entrez le nom de la ville</string>

    <!-- ============== Profil ============== -->
    <string name="txt_tps_prepa"></string>


    <!-- ============== Navigation ============== -->

    <string name="votre_nom">Votre nom</string>
    <string name="votre_pr_nom">Votre prénom</string>
    <string name="voici_les_horaires_de_passage">Voici les horaires de passage</string>
    <string name="choisis_une_station">Choisis une station !</string>
    <string name="choisis_une_ligne">Choisis une ligne !</string>
    <string name="title_activity_navi_map">Map</string>
    <string name="google_maps_key">AIzaSyC3bJz3E7hA0uVegqRsUqhfZJNakRl2_CE</string>
    <string name="moovintime1">MoovInTime1</string>
    <string name="btn_description">btn description</string>
    <string name="btn_bus">btn bus</string>
    <string name="btn_rer">btn rer</string>
    <string name="afficher_l_itin_raire">Afficher l\'itinéraire</string>
    <string name="indiquer_ma_position">Indiquer ma position</string>
    <string name="afficher_l_itinéraire">Afficher l\'itinéraire</string>
    <string name="afficher_temps">Afficher temps</string>
    <string name="btn_carte">Carte</string>
    <string name="btn_distance">Calcul du temps de trajet</string>
    <string name="mon_tablissement">Mon établissement :</string>
    <string name="obtenez_votre_temps_de_trajet">Obtenez votre temps de trajet !</string>
    <string name="h_min">..h..min</string>
    <string name="valider">Valider</string>
    <string name="temps_de_trajet_estim">Temps de trajet estimé</string>
    <string name="n">N°</string>
    <string name="code_postal">Code Postal</string>
    <string name="rue">Rue</string>
    <string name="mon_domicile">Mon domicile :</string>

    <!-- ============== Réveil ============== -->
    
    <string name="label_Alarme">Alarme</string>
    <string name="txt_aucune_alarm">Aucune alarme programmée !</string>
    <string name="txt_heure_du_réveil">réveil</string>
    <string name="btn_snooze">Snooze</string>
    <string name="btn_jouer">Jouer</string>
    <string name="btn_alarm_manuelle">Alarme manuelle</string>

    <!-- ============== Générale ============== -->
    <string name="txt_bonjour">Bonjour, </string>
    <string name="txt_infos">Vous retrouverez dans cette espace toutes les informations utiles pour votre profil.</string>
    <string name="txt_tps_preparation">Votre temps de préparation : </string>
    <string name="txt_tps_supplementaire">Votre temps supplémentaire :</string>
    <string name="txt_score_jeu">Votre meilleur score au jeu de calcul : </string>
    <string name="txt_jeu_clicker">Votre meilleur score au jeu du Clicker : </string>
    <string name="txt_jeu_memory">Votre meilleur score au jeu de Memory : </string>

<!-- =================== PROFIL JEANNE OSCOUUUUUUUUUUR =========== -->
    <string name="txt_sltjsuitonpote">Dans l\'interet de l\'application veuillez renseigner les champs suivants que l\'application fonctionne au mieux !</string>
    <string name="txt_bvnjpp">Bienvenue sur EtuMoov</string>
    <string name="txt_profiltusersarien">Temps de préparation supplémentaire (pas obligatoire)</string>
    <string name="txt_mtnmtn">Le temps qu\'il vous faut pour vous préparer le matin avant de partir (en minute)</string>
    <string name="btn_creationcompte">Création de votre compte</string>

</resources>