<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Profil.ProfilActivity">


    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="400dp"
        android:layout_height="821dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="492dp"
        android:contentDescription="@string/label_img"
        android:rotation="150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_fondaccueilblanc"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="208dp"
        android:layout_height="255dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="712dp"
        android:contentDescription="@string/label_img"
        android:rotation="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_param"
        app:srcCompat="@drawable/img_mdpoubliefdond1" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="381dp"
        android:layout_height="302dp"
        android:contentDescription="@string/label_img"
        app:layout_constraintBottom_toTopOf="@+id/btn_deconnexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.602"
        app:srcCompat="@drawable/ic_rectangle" />

    <TextView
        android:id="@+id/textNomPrenom"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:layout_marginTop="68dp"
        android:text="@string/label_score"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="80dp"
        android:layout_height="28dp"
        android:layout_marginTop="68dp"
        android:text="@string/txt_bonjour"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="340dp"
        android:layout_height="69dp"
        android:layout_marginTop="36dp"
        android:text="@string/txt_infos"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="376dp"
        android:layout_height="89dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="156dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="279dp"
            android:layout_marginLeft="5sp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="185dp"
                android:layout_height="39dp"
                android:layout_weight="0.75"
                android:text="@string/txt_tps_preparation"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_tps_p"
                android:layout_width="85dp"
                android:layout_height="30dp"
                android:text="@string/label_score"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/label_img"
                app:srcCompat="@drawable/ic_rectangle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="191dp"
                android:layout_height="37dp"
                android:layout_weight="0.75"
                android:text="@string/txt_tps_supplementaire"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_tps_s"
                android:layout_width="85dp"
                android:layout_height="30dp"
                android:text="@string/label_score"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/textView14"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="375dp"
        android:layout_height="99dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="217dp"
                android:layout_height="29dp"
                android:layout_weight="0.75"
                android:text="@string/txt_score_jeu"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textScore"
                android:layout_width="85dp"
                android:layout_height="30dp"
                android:text="@string/label_score"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="217dp"
                android:layout_height="29dp"
                android:layout_weight="0.75"
                android:text="@string/txt_jeu_clicker"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textScoreClicker"
                android:layout_width="85dp"
                android:layout_height="30dp"
                android:text="@string/label_score"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/textView16"
                app:layout_constraintTop_toTopOf="parent" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="217dp"
                android:layout_height="29dp"
                android:layout_weight="0.75"
                android:text="@string/txt_jeu_memory"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textScoreMemory"
                android:layout_width="85dp"
                android:layout_height="30dp"
                android:text="@string/label_score"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/textView17"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_deconnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:text="@string/btn_deco"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_param"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_settings"
        app:layout_constraintBottom_toTopOf="@+id/textNomPrenom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:itemBackground="@color/dark_blue"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:menu="@menu/menu_nav" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>